---------------------------------------------------------------------------------------------------
Version: 3.4.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 3.4.1
Date: 2022-05-21
  Changes:
    - Updated Korean locale (by x2605) (#115)
    - Updated Russian locale (by astorin) (#116)
  Bugfixes:
    - Fixed flib dependency (#114)
---------------------------------------------------------------------------------------------------
Version: 3.4.0
Date: 2022-05-21
  Features:
    - Added new categories:
      - Entity type
      - Item type
      - Science pack: Uncheck a science pack to hide all objects that it unlocks (#89)
    - Added new interactions:
      - [Entity] Shift + click to get a blueprint (not just on the recipe screen) (#98)
    - Added new page contents:
      - [Entity] Entity type, expected resources
      - [Item] Affects recipes (for modules), Gathered from, item type
      - [Recipe] Pollution multiplier (#113)
    - Added new pages:
      - Entity type: All entities of the given type
      - Item type: All items of the given type
  Changes:
    - Category lists will be hidden when that category is disabled
---------------------------------------------------------------------------------------------------
Version: 3.3.4
Date: 2022-04-20
  Bugfixes:
    - Fixed a crash when upgrading from 3.1 or earlier
---------------------------------------------------------------------------------------------------
Version: 3.3.3
Date: 2022-04-14
  Bugfixes:
    - Fixed a crash when refreshing contents with an invalid info or quick ref GUI (#110)
    - Fixed that certain entities had a "get blueprint" action when they weren't blueprintable (#111)
---------------------------------------------------------------------------------------------------
Version: 3.3.2
Date: 2022-03-20
  Bugfixes:
    - Fixed a crash when a favorites entry was removed from the game (#107)