@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.4.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when an entity is mineable, but has no mineable products (#118)
 ---------------------------------------------------------------------------------------------------
 Version: 3.4.1
 Date: 2022-05-21
